feat(cicd): se configura toda la ejecucion